--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
+<style type="text/css">
+body {
+	background-image: url(images/2870932f2ab18c54808c2c87db1fb771_true.jpg);
+}
+</style>
 </head>
 
 <body>
-<img src="images/20150517151820_TcNVv.thumb.700_0.png" width="700" height="965" />
+<div align="center">
+  <h1><strong>简单静态网页
+  </strong></h1>
+</div>
+<h2 align="right">就要比赛了，嗯，fighting！...</h2>
+<p><img src="images/ACM.png" width="400" height="324" /></p>
+<h1>圆周率，fighting！</h1>
+<p>&nbsp;</p>
 </body>
 </html>
