--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>人间烟火气</title>
 <style type="text/css">
 body {
 	background-image: url(images/2870932f2ab18c54808c2c87db1fb771_true.jpg);
