--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
 <title>人间烟火气</title>
 <style type="text/css">
 body {
-	background-image: url(images/2870932f2ab18c54808c2c87db1fb771_true.jpg);
+	background-image: url(images/timg.jpg);
 }
 </style>
 </head>
 
 <body>
 <div align="center">
-  <h1><strong>简单静态网页
-  </strong></h1>
+  <h1><strong>人间烟火气</strong></h1>
 </div>
-<h2 align="right">就要比赛了，嗯，fighting！...</h2>
-<p><img src="images/ACM.png" width="400" height="324" /></p>
-<h1>圆周率，fighting！</h1>
+<h2>2019.5.10 —— “浪潮杯”山东省第十届ACM大学生程序设计竞赛（济南大学）</h2>
+<p><strong>正式比赛的前一天，去熟悉环境。这感觉像高考一般。天气稍有些热。</strong></p>
+<p><strong>怕打铁，但深知自己的实力......算了，尽力就好，在生死面前一切都是小事。</strong></p>
+<p><img src="file:///C|/Users/sj/Pictures/Camera Roll/ACM.png" width="348" height="235" />  <img src="images/v2-c1360807282db8d88d565ddc49347e63.jpg" width="366" height="237" /></p>
+<h3 align="center"><em><strong>圆周率，Fighting！</strong></em></h3>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<h2><em>2019.5.11</em>—— “浪潮杯”山东省第十届ACM大学生程序设计竞赛 正式赛</h2>
 <p>&nbsp;</p>
 </body>
 </html>
