--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 <h2>2019.5.10 —— “浪潮杯”山东省第十届ACM大学生程序设计竞赛（济南大学）</h2>
 <p><strong>正式比赛的前一天，去熟悉环境。这感觉像高考一般。天气稍有些热。</strong></p>
 <p><strong>怕打铁，但深知自己的实力......算了，尽力就好，在生死面前一切都是小事。</strong></p>
-<p><img src="file:///C|/Users/sj/Pictures/Camera Roll/ACM.png" width="348" height="235" />  <img src="images/v2-c1360807282db8d88d565ddc49347e63.jpg" width="366" height="237" /></p>
+<p><img src="images/ACM.png" width="302" height="246" />  <img src="images/v2-c1360807282db8d88d565ddc49347e63.jpg" width="379" height="245" /></p>
 <h3 align="center"><em><strong>圆周率，Fighting！</strong></em></h3>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
