--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>人间烟火</title>
 <style type="text/css">
 body {
-	background-image: url(img/v2-849a1a52995468883814778361d7f32a_r.jpg);
+	background-image: url(img/2.jpg);
 	background-repeat: repeat-y;
 }
 body,td,th {
