--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>杂件</title>
+<style type="text/css">
+body {
+	background-image: url(img/v2-affd6b88da47f8647b430c2040dd3123_hd.jpg);
+}
+</style>
 </head>
 
 <body>
