--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ body {
 </head>
 
 <body>
-<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C语言运算符优先级</h1>
-<table border="1" cellspacing="0" cellpadding="0">
+<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C语言运算符优先级</h1>
+<table border="1" cellspacing="0" cellpadding="0"align="center">
   <tbody>
 <tr>
 <td width="68">
@@ -737,6 +737,78 @@ body {
 </td>
 </tr>
 </tbody>
+</table>
+<p>&nbsp;</p>
+<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;%格式化输出</h1>
+<table border="1" cellpadding="0" cellspacing="0"align="center">
+<tr>
+<th width="184" height="40">符号</th>
+<th width="715" height="40">说明</th>
+</tr>
+<tr>
+<td height="40">% d</td>
+<td height="40">十进制形式输出带符号整数(正数不输出符号)</td>
+</tr>
+<tr>
+<td height="40">% i</td>
+<td height="40">有符号十进制整数(与%d相同)</td>
+</tr>
+<tr>
+  <td height="40">% c</td>
+  <td height="40">单个字符</td>
+</tr>
+<tr>
+  <td height="40">% s</td>
+  <td height="40">字符串</td>
+</tr>
+<tr>
+  <td height="40">% u</td>
+  <td height="40">十进制形式输出无符号整数</td>
+</tr>
+<tr>
+  <td height="40">% o</td>
+  <td height="40">八进制形式输出无符号整数(不输出前缀O)</td>
+</tr>
+<tr>
+  <td height="40">% x</td>
+  <td height="40">十六进制形式输出无符号整数(不输出前缀OX)</td>
+</tr>
+<tr>
+  <td height="40">% X</td>
+  <td height="40">十六进制形式输出无符号整数(不输出前缀OX)</td>
+</tr>
+<tr>
+  <td height="40">% e</td>
+  <td height="40">以指数形式输出单、双精度实数</td>
+</tr>
+<tr>
+  <td height="40">% E</td>
+  <td height="40">以指数形式输出单、双精度实数</td>
+</tr>
+<tr>
+  <td height="40">% f</td>
+  <td height="40">以小数形式输出单、双精度实数</td>
+</tr>
+<tr>
+  <td height="40">% g</td>
+  <td height="40">以%f%e中较短的输出宽度输出单、双精度实数,%e格式在指数小于-4或者大 于等于精度时使用</td>
+</tr>
+<tr>
+  <td height="40">% G</td>
+  <td height="40">以%f%e中较短的输出宽度输出单、双精度实数,%e格式在指数小于-4或者大 于等于精度时使用</td>
+</tr>
+<tr>
+  <td height="40">% p</td>
+  <td height="40">指针</td>
+</tr>
+<tr>
+  <td height="40">% a</td>
+  <td height="40">浮点数、十六进制数字和p-计数法(C99)</td>
+</tr>
+<tr>
+  <td height="40">% A</td>
+  <td height="40">浮点数、十六进制数字和p-计数法(C99)</td>
+</tr>
 </table>
 </body>
 </html>
